--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -36,7 +36,7 @@ IF( OTB_COMPILE_JPEG2000 )
 ENDIF( OTB_COMPILE_JPEG2000 )
 
 IF( OTB_USE_CURL )
-    TARGET_LINK_LIBRARIES (OTBIO ${CURL_LIBRARY})
+    TARGET_LINK_LIBRARIES (OTBIO ${CURL_LIBRARY} tinyXML)
 ENDIF( OTB_USE_CURL )
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBIO PROPERTIES ${OTB_LIBRARY_PROPERTIES})
