--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -587,7 +587,7 @@ IF(OTB_USE_EXTERNAL_GDAL)
   ENDIF (NOT JPEG_LIBRARY)
   ENDIF(GDAL_HAS_JPEG)
 
-  # Check if ${GDAL_LIBRARY} has jpeg library
+  # Check if ${GDAL_LIBRARY} has ogr library
   TRY_COMPILE(GDAL_HAS_OGR
   ${CMAKE_CURRENT_BINARY_DIR}/CMake
   ${CMAKE_CURRENT_SOURCE_DIR}/CMake/TestGDALHasOGR.cxx
