COMP: do not include undefined dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -624,7 +624,9 @@ IF(GETTEXT_FOUND)
     libintl.h
     DOC "Path to gettext include directory (where libintl.h can be found)")
   MARK_AS_ADVANCED(GETTEXT_INCLUDE_DIR)
-  INCLUDE_DIRECTORIES(${GETTEXT_INCLUDE_DIR})
+  IF(GETTEXT_INCLUDE_DIR)
+    INCLUDE_DIRECTORIES(${GETTEXT_INCLUDE_DIR})
+  ENDIF(GETTEXT_INCLUDE_DIR)
 ELSE(GETTEXT_FOUND)
   SET(OTB_I18N 0)
   MESSAGE(STATUS
