--- a/Testing/Fa/CMakeLists.txt
+++ b/Testing/Fa/CMakeLists.txt
@@ -215,9 +215,12 @@ ADD_TEST(FA-0000041-mean_shift2 ${CXX_TEST_PATH}/0000041-mean_shift
         ${TEMP}/boundary_of_labelled_image2.tif
 	)
 
+IF(OTB_USE_VISU_GUI)
 ADD_TEST(FA-0000132-jpg ${CXX_TEST_PATH}/0000132-jpg 
         ${INPUTDATA}/toulouse_auat.jpg
 	)
+ENDIF(OTB_USE_VISU_GUI)
+
 # -------       Vectorization issue   -----------------------------------
 # FIXME Desactivated until http://bugs.orfeo-toolbox.org/view.php?id=94
 # has somebody working on it
@@ -239,8 +242,10 @@ TARGET_LINK_LIBRARIES(StreamingStat OTBFeatureExtraction OTBIO OTBCommon)
 ADD_EXECUTABLE(0000041-mean_shift  0000041-mean_shift.cxx)
 TARGET_LINK_LIBRARIES(0000041-mean_shift OTBIO OTBCommon OTBBasicFilters)
 
+IF(OTB_USE_VISU_GUI)
 ADD_EXECUTABLE(0000132-jpg 0000132-jpg.cxx )
 TARGET_LINK_LIBRARIES(0000132-jpg OTBIO OTBVisu)
+ENDIF(OTB_USE_VISU_GUI)
 
 ADD_EXECUTABLE(PolygonsVectorization PolygonsVectorization.cxx)
 TARGET_LINK_LIBRARIES(PolygonsVectorization OTBIO OTBCommon)
