--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -16,11 +16,15 @@ TARGET_LINK_LIBRARIES (OTBCommon ITKAlgorithms ITKStatistics ITKCommon otbconfig
 IF(OTB_USE_MAPNIK)
     TARGET_LINK_LIBRARIES(OTBCommon ${MAPNIK_LIBRARY})
 ENDIF(OTB_USE_MAPNIK)
+
 IF(OTB_USE_PQXX)
 #TODO this line should be refined when we will like to have this capability with windows
     TARGET_LINK_LIBRARIES(OTBCommon pq pqxx)
 ENDIF(OTB_USE_PQXX)
 
+IF(GETTEXT_FOUND)
+    TARGET_LINK_LIBRARIES(OTBCommon ${GETTEXT_LIBRARY})
+ENDIF(GETTEXT_FOUND)
 
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBCommon PROPERTIES ${OTB_LIBRARY_PROPERTIES})
