BUG: find libintl for windows and mac platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -617,12 +617,16 @@ IF(GETTEXT_FOUND)
   FIND_PATH(GETTEXT_INCLUDE_DIR
     libintl.h
     DOC "Path to gettext include directory (where libintl.h can be found)")
- FIND_LIBRARY(GETTEXT_LIBRARY gettextlib
-    DOC "GetText library")
   MARK_AS_ADVANCED(GETTEXT_INCLUDE_DIR)
+
   IF(GETTEXT_INCLUDE_DIR)
     INCLUDE_DIRECTORIES(${GETTEXT_INCLUDE_DIR})
   ENDIF(GETTEXT_INCLUDE_DIR)
+
+  FIND_LIBRARY(GETTEXT_LIBRARY gettextlib DOC "GetText library")
+  IF(APPLE OR WIN32)
+    FIND_LIBRARY(GETTEXT_INTL_LIBRARY intl DOC "GetText intl library")
+  ENDIF(APPLE OR WIN32)
 ELSE(GETTEXT_FOUND)
   SET(OTB_I18N 0)
   MESSAGE(STATUS
