--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -24,6 +24,9 @@ ENDIF(OTB_USE_PQXX)
 
 IF(GETTEXT_FOUND)
     TARGET_LINK_LIBRARIES(OTBCommon ${GETTEXT_LIBRARY})
+    IF(APPLE OR WIN32)
+       TARGET_LINK_LIBRARIES(OTBCommon ${GETTEXT_INTL_LIBRARY})
+    ENDIF(APPLE OR WIN32)
 ENDIF(GETTEXT_FOUND)
 
 IF(OTB_LIBRARY_PROPERTIES)
