ENH : otbTestDriver bin to use in external projects

--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -2,6 +2,9 @@
 
 FILE(GLOB OTBIO_SRCS "*.cxx" )
 
+# Remove the otbTestDriver cause only an executable is nedded 
+ LIST(REMOVE_ITEM OTBIO_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbTestDriver.cxx" )
+
 IF(NOT OTB_COMPILE_JPEG2000)
     LIST(REMOVE_ITEM OTBIO_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbJPEG2000ImageIO.cxx" )
     LIST(REMOVE_ITEM OTBIO_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbJPEG2000ImageIOFactory.cxx" )
@@ -64,6 +67,17 @@ IF(NOT OTB_COMPILE_JPEG2000)
    LIST(REMOVE_ITEM __files1 "${CMAKE_CURRENT_SOURCE_DIR}/otbJpeg2000ImageIO.h" )
 ENDIF(NOT OTB_COMPILE_JPEG2000)
 
+# Compile otbTestDriver
+# Nedded in the OTB-Wrapping project.
+# Has to be compiled even if the BUILD_TEST  are set to OFF
+IF(CMAKE_COMPILER_IS_GNUCXX)
+  SET_SOURCE_FILES_PROPERTIES(itkTestDriver.cxx PROPERTIES COMPILE_FLAGS -w)
+ENDIF(CMAKE_COMPILER_IS_GNUCXX)
+
+ADD_EXECUTABLE(otbTestDriver otbTestDriver.cxx) 
+TARGET_LINK_LIBRARIES(otbTestDriver OTBIO)
+SET(ITK_TEST_DRIVER "${EXECUTABLE_OUTPUT_PATH}/otbTestDriver" 
+    CACHE INTERNAL "otbTestDriver path to be used by subprojects")
 
 IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
   FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
@@ -71,5 +85,9 @@ IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
   INSTALL(FILES ${__files1} ${__files2}
     DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/IO
     COMPONENT Development)
+  INSTALL(TARGETS otbTestDriver RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT Development)
 ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+
+
+
 
