--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -22,12 +22,12 @@ IF(OTB_USE_PQXX)
     TARGET_LINK_LIBRARIES(OTBCommon pq pqxx)
 ENDIF(OTB_USE_PQXX)
 
-IF(GETTEXT_FOUND)
+IF(OTB_I18N)
     TARGET_LINK_LIBRARIES(OTBCommon ${GETTEXT_LIBRARY})
     IF(APPLE OR WIN32)
        TARGET_LINK_LIBRARIES(OTBCommon ${GETTEXT_INTL_LIBRARY})
     ENDIF(APPLE OR WIN32)
-ENDIF(GETTEXT_FOUND)
+ENDIF(OTB_I18N)
 
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBCommon PROPERTIES ${OTB_LIBRARY_PROPERTIES})
