--- a/Testing/Code/CMakeLists.txt
+++ b/Testing/Code/CMakeLists.txt
@@ -1,28 +1,28 @@
 # $Id$
 
-SUBDIRS(
-Common
-IO
-BasicFilters
-FeatureExtraction
-ChangeDetection
-Learning
-MultiScale
-DisparityMap
-SpatialReasoning
-Projections
-Radiometry
-Fusion
-Markov
-SARPolarimetry
-TestSystem
-)
+ADD_SUBDIRECTORY(Common)
+ADD_SUBDIRECTORY(IO)
+ADD_SUBDIRECTORY(BasicFilters)
+ADD_SUBDIRECTORY(FeatureExtraction)
+ADD_SUBDIRECTORY(ChangeDetection)
+ADD_SUBDIRECTORY(Learning)
+ADD_SUBDIRECTORY(MultiScale)
+ADD_SUBDIRECTORY(DisparityMap)
+ADD_SUBDIRECTORY(SpatialReasoning)
+ADD_SUBDIRECTORY(Projections)
+ADD_SUBDIRECTORY(Radiometry)
+ADD_SUBDIRECTORY(Fusion)
+ADD_SUBDIRECTORY(Markov)
+ADD_SUBDIRECTORY(SARPolarimetry)
+ADD_SUBDIRECTORY(TestSystem)
 
 IF(OTB_USE_VISU_GUI)
-        SUBDIRS(Visu Gui Visualization)
+        ADD_SUBDIRECTORY(Visu)
+        ADD_SUBDIRECTORY(Gui)
+        ADD_SUBDIRECTORY(Visualization)
 ENDIF(OTB_USE_VISU_GUI)
 
 IF(OTB_USE_PQXX)
-        SUBDIRS(GeospatialAnalysis)
+        ADD_SUBDIRECTORY(GeospatialAnalysis)
 ENDIF(OTB_USE_PQXX)
 
