--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -8,35 +8,45 @@ IF(OTB_USE_VISU_GUI)
 ENDIF(OTB_USE_VISU_GUI)
 
 IF(NOT OTB_USE_EXTERNAL_ITK)
-  SUBDIRS(ITK)
+  ADD_SUBDIRECTORY(ITK)
 ENDIF(NOT OTB_USE_EXTERNAL_ITK)
 
 IF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
-  SUBDIRS( otbopenthreads )
+  ADD_SUBDIRECTORY( otbopenthreads )
 ENDIF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
 
 
 IF(OTB_USE_LIBLAS)
-  SUBDIRS( otbliblas )
+  ADD_SUBDIRECTORY( otbliblas )
 ENDIF(OTB_USE_LIBLAS)
 
 IF(OTB_COMPILE_JPEG2000)
-  SUBDIRS( otbopenjpeg )
+  ADD_SUBDIRECTORY( otbopenjpeg )
 ENDIF(OTB_COMPILE_JPEG2000)
 
 
 IF(NOT OTB_USE_EXTERNAL_EXPAT)
-	SUBDIRS( otbexpat )
+	ADD_SUBDIRECTORY( otbexpat )
 ENDIF(NOT OTB_USE_EXTERNAL_EXPAT)
 
 IF(NOT OTB_USE_EXTERNAL_BOOST)
-  SUBDIRS(BGL)
+  ADD_SUBDIRECTORY(BGL)
 ENDIF(NOT OTB_USE_EXTERNAL_BOOST)
 
-SUBDIRS(otbsvm dxflib InsightJournal otbossim otbossimplugins otb6S tinyXMLlib otbkml otbedison otbsiftfast otbconfigfile)
+ADD_SUBDIRECTORY(otbsvm )
+ADD_SUBDIRECTORY(dxflib)
+ADD_SUBDIRECTORY(InsightJournal)
+ADD_SUBDIRECTORY(otbossim)
+ADD_SUBDIRECTORY(otbossimplugins)
+ADD_SUBDIRECTORY(otb6S)
+ADD_SUBDIRECTORY(tinyXMLlib)
+ADD_SUBDIRECTORY(otbkml)
+ADD_SUBDIRECTORY(otbedison)
+ADD_SUBDIRECTORY(otbsiftfast)
+ADD_SUBDIRECTORY(otbconfigfile)
 
 IF(BUILD_TESTING)
-        SUBDIRS( Dart )
+        ADD_SUBDIRECTORY( Dart )
 ENDIF(BUILD_TESTING)
 
 
