COMP: library mess...

--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -30,7 +30,9 @@ ENDIF(OTB_COMPILE_JPEG2000)
 
 
 ADD_LIBRARY(OTBIO ${OTBIO_SRCS})
-TARGET_LINK_LIBRARIES (OTBIO OTBCommon ${GDAL_LIBRARY} ${OGR_LIBRARY} otbossim otbossimplugins ITKIO ITKCommon dxf otbkml)
+TARGET_LINK_LIBRARIES (OTBIO ${GDAL_LIBRARY} ${OGR_LIBRARY} OTBCommon)
+TARGET_LINK_LIBRARIES (OTBIO otbossim otbossimplugins ITKIO ITKCommon dxf otbkml)
+
 IF (OTB_USE_LIBLAS)
     TARGET_LINK_LIBRARIES(OTBIO otbliblas)
 ENDIF(OTB_USE_LIBLAS)
